--- a/src/gallery/image.style.scss
+++ b/src/gallery/image.style.scss
@@ -5,15 +5,20 @@
   flex-wrap: wrap;
 }
 .img-wrap {
-  width: 33.3%;
+  width: 30%;
   @media only screen and (max-width: 1000px) {
     width: 50%;
   }
-  opacity: 0.8;
+  margin: 0 auto;
+  opacity: 0.9;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   img {
+    cursor: pointer;
     width: 100%;
+  }
+  &:hover {
+    opacity: 1;
   }
 }
